fixed spacing / colors

--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
+/* html {
+    cursor: none;
+  } */
+
 *,
 *::before,
 *::after { 
@@ -12,6 +16,20 @@
     border: 0;
     box-sizing: border-box; 
 }
+
+#invertedcursor {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    background: #fff;
+    border-radius: 50%;
+    top: var(--y, 0);
+    left: var(--x, 0);
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    mix-blend-mode: difference;
+    transition: transform .2s;
+  }
 
 /* -------------------------- HOME -------------------------- */
 .menu {
@@ -50,7 +68,7 @@
 }
 
 .vertical-menu a:hover {
-    color: #9F55C1;
+    color: #9024F9;
 }
 
 #back_button {
@@ -65,7 +83,6 @@
     font-family: 'Montserrat', monospace;
     font-size: 16px;
     font-weight: 500;
-    /* color: #9F55C1 !important; */
     color: #9872BD !important;
     text-decoration: none;
     display: block;
@@ -77,13 +94,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    /* justify-content: space-between; */
-
     position: absolute;
     right: 0;
-    /* padding-right: -400; */
-    /* right: 0px; */
-    /* max-width: 600px; */
     min-width: 720px;
     margin-top: 40px;
     margin-left: 520px;
@@ -110,8 +122,6 @@
     display: none;
     width: 200px;
     height: 134px; object-fit: cover;
-    
-    /* height: 134px;  */
     float: right;
     bottom: 0;
     margin-right: 24px;
@@ -121,9 +131,6 @@
     .project_title {
         font-size: 18px;
     }
-	/* .projects img {
-		display: none;
-	} */
     .projects {
         min-width: 300px;
     }
@@ -235,7 +242,6 @@
     align-self: stretch;
     flex-grow: 0;
     padding-bottom: 30px;
-    /* height: 194px; */
 }
 
 .project_text {
@@ -250,8 +256,11 @@
 .project_title {
     font-family: 'IBM Plex Mono', monospace;
     text-decoration: none;
-    /* font-size: 30px; */
     color: black;
+}
+
+.project_title:hover {
+    color: #9024F9;
 }
 
 .project_text p {
@@ -285,11 +294,6 @@
     color: black;
 }
 
-.work_title a:link, a:hover, a:visited, a:active, a:focus {
-    color: black;
-    text-decoration: none;
-  }
-
 .circle {
     position: fixed;
     right: -142px;
@@ -310,8 +314,6 @@
     -moz-transform: translate3d(0, 0, 0);
 }
 
-
-
 /* -------------------------- ARCHIVE -------------------------- */
 
 .archive_grid {
@@ -319,7 +321,6 @@
     padding-top: 20px;
     display: grid;
     max-width: 960px;
-    /* margin: 100px auto; */
     grid-template-columns: 300px 400px;
     column-gap: 40px;
     row-gap: 40px;
@@ -406,7 +407,6 @@
 
 .page h1 {
     font-family: 'IBM Plex Mono', monospace;
-    /* font-family: 'Montserrat', monospace; */
     font-size: 30px;
 }
 
@@ -415,9 +415,6 @@
     width: 600px;
 
     font-family: 'Montserrat', monospace;
-    /* font-family: 'IBM Plex Mono', monospace; */
-    /* font-family: 'PT Serif', serif; */
-    /* font-family: 'Source Sans Pro', sans-serif; */
     font-weight: 300;
     font-size: 14px;
     color: #545454;
@@ -433,11 +430,9 @@
     font-weight: 300;
     font-size: 14px;
     color: #545454;
-    margin-top: 8px;
+    /* margin-top: 8px; */
     line-height: 24px;
 }
-
-
 
 .page h2 {
     width: 600px;
@@ -531,7 +526,6 @@ body {
 }
 
 .footer {
-    /* display: none; */
     position: fixed;
     bottom: 20px;
     left: 20px;
